--- a/manager-api/services/cadvisor.yaml
+++ b/manager-api/services/cadvisor.yaml
@@ -1,8 +1,11 @@
+key: cadvisor
 service_name: cAdvisor
 owner: Vlad
 description: Container Advisor collects information about running Docker containers.
 created_at: 2025-07-22
-tags: ["monitoring"]
+tags:
+- monitoring
 ip: 192.168.0.169
 port: 8081
+domain: cadvisor.server.local
 notes: Runs as a Docker container. Part of the Monitoring stack.
