--- a/manager-api/services/cockpit.yaml
+++ b/manager-api/services/cockpit.yaml
@@ -1,8 +1,9 @@
+key: cockpit
 service_name: Cockpit
 owner: Vlad
 description: Web-based graphical interface for managing the host OS.
 created_at: 2025-07-22
-tags: ["linux", "admin"]
+tags: ["core", "linux", "admin"]
 ip: 192.168.0.169
 port: 9091
 notes: Runs as a native service on the host OS.
