--- a/manager-api/services/grafana.yaml
+++ b/manager-api/services/grafana.yaml
@@ -1,8 +1,14 @@
+key: grafana
 service_name: Grafana
 owner: Vlad
-description: Main Grafana instance displays information about existing Docker containers, system resources and Mincraft servers.
+description: Main Grafana instance displays information about existing Docker containers,
+  system resources and Mincraft servers.
 created_at: 2025-07-22
-tags: ["core", "monitoring", "grafana"]
+tags:
+- core
+- monitoring
+- grafana
 ip: 192.168.0.169
 port: 3000
+domain: grafana.server.local
 notes: Runs as a Docker container. Part of the Monitoring stack.
