--- a/manager-api/services/jellyfin.yaml
+++ b/manager-api/services/jellyfin.yaml
@@ -1,8 +1,14 @@
+key: jellyfin
 service_name: Jellyfin Media Server
 owner: Vlad
 description: Movies and TV shows server.
 created_at: 2025-07-22
-tags: ["core", "media", "jellyfin"]
+tags:
+- core
+- media
+- jellyfin
 ip: 192.168.0.169
 port: 8096
-notes: Runs as a Docker container. Part of the Media Server stack. Is an externally accessible service.
+domain: jellyfin.server.local
+notes: Runs as a Docker container. Part of the Media Server stack. Is an externally
+  accessible service.
