--- a/manager-api/services/pihole.yaml
+++ b/manager-api/services/pihole.yaml
@@ -1,8 +1,14 @@
+key: pihole
 service_name: Pi-hole
 owner: Vlad
 description: DNS server, sinkhole and ad blocker
 created_at: 2025-07-22
-tags: ["core", "pihole", "dns", "adblock"]
+tags:
+- core
+- pihole
+- dns
+- adblock
 ip: 192.168.0.170
-port: 80
+port: 8080
+domain: pihole.server.local
 notes: Runs as a Docker container on the Raspberry Pi.
