--- a/manager-api/services/portainer.yaml
+++ b/manager-api/services/portainer.yaml
@@ -1,8 +1,11 @@
+key: portainer
 service_name: Portainer
 owner: Vlad
 description: Docker container management tool.
 created_at: 2025-07-22
-tags: ["core", "docker"]
+tags:
+- core
+- docker
 ip: 192.168.0.169
 port: 9443
 notes: Runs as a Docker container.
