--- a/manager-api/services/prowlarr.yaml
+++ b/manager-api/services/prowlarr.yaml
@@ -1,8 +1,13 @@
+key: prowlarr
 service_name: Prowlarr
 owner: Vlad
 description: Torrent indexer manager tool, part of the *arr suite.
 created_at: 2025-07-22
-tags: ["torrent", "media", "jellyfin"]
+tags:
+- torrent
+- media
+- jellyfin
 ip: 192.168.0.169
 port: 9696
+domain: prowlarr.server.local
 notes: Runs as a Docker container. Part of the Media Server stack.
