--- a/manager-api/services/qbittorrent.yaml
+++ b/manager-api/services/qbittorrent.yaml
@@ -1,8 +1,13 @@
+key: qbittorrent
 service_name: qBitTorrent
 owner: Vlad
 description: Torrent client.
 created_at: 2025-07-22
-tags: ["core", "media", "jellyfin"]
+tags:
+- core
+- media
+- jellyfin
 ip: 192.168.0.169
 port: 8080
+domain: qbittorrent.server.local
 notes: Runs as a Docker container. Part of the Media Server stack.
