--- a/manager-api/services/radarr.yaml
+++ b/manager-api/services/radarr.yaml
@@ -1,8 +1,13 @@
+key: radarr
 service_name: Radarr
 owner: Vlad
 description: Movie manager tool, part of the *arr suite.
 created_at: 2025-07-22
-tags: ["core", "media", "jellyfin"]
+tags:
+- core
+- media
+- jellyfin
 ip: 192.168.0.169
 port: 7878
+domain: radarr.server.local
 notes: Runs as a Docker container. Part of the Media Server stack.
