--- a/manager-api/services/sonarr.yaml
+++ b/manager-api/services/sonarr.yaml
@@ -1,8 +1,13 @@
+key: sonarr
 service_name: Sonarr
 owner: Vlad
 description: TV shows manager tool, part of the *arr suite.
 created_at: 2025-07-22
-tags: ["core", "media", "jellyfin"]
+tags:
+- core
+- media
+- jellyfin
 ip: 192.168.0.169
 port: 8989
+domain: sonarr.server.local
 notes: Runs as a Docker container. Part of the Media Server stack.
