fully transitioned to spring boot backend

--- a/server-manager/src/main/resources/application.properties
+++ b/server-manager/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 springdoc.api-docs.path=/manage/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.path=/manage/swagger-ui.html
+
+# External url for the backend (for CORS)
+url.external=${EXTERNAL_URL}
