--- a/monitoring/promtail-config.yml
+++ b/monitoring/promtail-config.yml
@@ -17,3 +17,35 @@ scrape_configs:
       - source_labels: ['__meta_docker_container_name']
         regex: '/(.*)'
         target_label: 'container'
+
+  - job_name: fail2ban
+    static_configs:
+      - targets: [localhost]
+        labels:
+          job: fail2ban
+          app: fail2ban
+          __path__: /var/log/fail2ban.log
+    pipeline_stages:
+      - match:
+          # only run stages for Ban lines
+          selector: '{job="fail2ban"}'
+          stages:
+            # extract jail name and IP from lines like:
+            # 2025-08-24 ... fail2ban.actions[...]: [sshd] Ban 1.2.3.4
+            - regex:
+                expression: "\\[(?P<jail>[^\\]]+)\\]\\s+(?:Ban|Unban|Found)\\s+(?P<ip>\\d{1,3}(?:\\.\\d{1,3}){3})"
+            - labels:
+                jail: ""
+            # keep only SSH jail bans in the pipeline below
+            - match:
+                selector: '{jail="sshd"}'
+                stages:
+                  - geoip:
+                      db: /etc/promtail/GeoLite2-City.mmdb
+                      source: ip
+                      db_type: city
+                  # keep only minimal geo labels
+                  - labelallow:
+                      - geoip_country_name
+                      - geoip_location_latitude
+                      - geoip_location_longitude
