--- a/mediaserver/docker-compose.yml
+++ b/mediaserver/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     jellyfin:
-        image: jellyfin/jellyfin
+        image: jellyfin/jellyfin:10.11.0
         container_name: jellyfin
         privileged: true # required for VAAPI access
         group_add:
