added basic spotify tools, changed prompts

--- a/server-manager/src/main/resources/application.properties.sample
+++ b/server-manager/src/main/resources/application.properties.sample
@@ -37,3 +37,8 @@ ollama.chat.model=qwen-mcp:latest
 
 homeassistant.base-url=http://192.168.0.1:8123
 homeassistant.token=sometoken
+
+gotify.url=url
+gotify.token=token
+
+spotify.entity-id=media_player.spotify
