added chat history to llm, text-to-speech with piper, switched from vnc to rdp, from novnc to guacamole

--- a/dashboard/.env.sample
+++ b/dashboard/.env.sample
@@ -1,8 +1,8 @@
 SESSION_SECRET="secret"
 
-NEXT_PUBLIC_BACKEND_API_URL=https://mydomain.com/api/v1
+NEXT_PUBLIC_DOMAIN=https://mydomain.com
 
-NEXT_PUBLIC_VM_URL=https://mydomain.com/vm
+NEXT_PUBLIC_BACKEND_API_URL=https://mydomain.com/api/v1
 
 NEXT_PUBLIC_JELLYFIN_URL=https://mydomain.com/jellyfin
 
