monitoring changes: logs&metrics for manager api, fixed high cpu usage cadvisor, added watchdog to zigbee2mqtt

--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -32,9 +32,10 @@ services:
           - /run/udev:/run/udev:ro
         devices:
           - /dev/serial/by-id/usb-Itead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_V2_9ed54c883414ef11bbec6db8bf9df066-if00-port0:/dev/ttyUSB0
-        restart: always
+        restart: unless-stopped
         depends_on:
           - mqtt
         network_mode: host
         environment:
             - TZ=Europe/Bucharest
+            - Z2M_WATCHDOG=default
