--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,15 +23,15 @@
     "@tanstack/react-query": "^5.84.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "dockerode": "^4.0.6",
     "jose": "^6.0.10",
     "lucide-react": "^0.482.0",
-    "next": "^15.2.3",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "node-loader": "^2.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.0.2",
@@ -42,11 +42,15 @@
     "@tailwindcss/postcss": "^4",
     "@types/dockerode": "^3.3.35",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
