--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   c9manager-nextjs:
     container_name: c9manager-nextjs
     build: .
-    restart: always
+    restart: unless-stopped
+    user: "1000:1000"
     ports:
       - "3222:3222"
     volumes:
