--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -27,7 +27,7 @@
     "dockerode": "^4.0.6",
     "jose": "^6.0.10",
     "lucide-react": "^0.482.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "node-loader": "^2.1.0",
     "react": "19.2.1",
